# homelab-k8s

./: .ansible-lint  .bash_aliases  .editorconfig  .emacs  .env.tpl  .gitattributes  .gitignore  .groovylintrc.json  AGENTS.md  Makefile  README.md  ansible.cfg  argocd.yml  awx.execute.yml  awx.setup.yml  awx.teardown.yml  awx.yml  basics.yml  buildkite.yml  certmanager.yml  cloc.sh  cluster.yml  debug.yml  diskfree.sh  dns.yml  externaldns.yml  externalsecrets.yml  files.yml  flowise.yml  gitlab.yml  gzage.sh  harbor.yml  istio.yml  keycloak.yml  litellm.yml  logging.yml  main.yml  manifests.yml  metacontroller.yml  metallb.yml  (+35 more)
ansible/: .ansible-lint  ansible.cfg  basics.yml  cluster.yml  files.yml  hosts.ini  main.yml  packages.yml  rancher.yml  rke2.yml  shutdown.yml  shutdownvms.yml  snapshotvms.yml  startvms.yml  storage.yml
files/: .bash_aliases
filter_plugins/: filters.py
inventory/: hosts.ini  rancherfederal.rke2.yml
lookup_plugins/: one_bucket_iam_policy.py
manifests/: .metallbtweaks.yaml  metallbtweaks.yaml  priorityclasses.yaml  storageclasses.yaml
pki/: COMMANDS  cert.sh  unlock-yubikey.scd  unlock-yubikey.sh
playbooks/: argocd.yml  awx.execute.yml  awx.setup.yml  awx.yml  basics.yml  bentopdf.yml  buildbuddy.yml  buildfarm.yml  buildkite.yml  certmanager.yml  cluster.yml  debug.yml  dns.yml  externaldns.yml  externalsecrets.yml  files.yml  flowise.yml  gitea.yml  gitlab.yml  harbor.yml  istio.yml  jenkins.yml  keycloak.yml  kyverno.yml  litellm.yml  logging.yml  manifests.yml  metacontroller.yml  metallb.yml  minio.yml  monitoring.yml  nodefeatures.yml  observability.yml  ollama.yml  openclaw.yml  opencode.yml  opensearch.yml  openwebui.yml  packages.yml  playwright.yml  (+18 more)
roles/: requirements.yml
scripts/: cloc.sh  diskfree.sh  gzage.sh  play.sh  unseal.sh  vaultpass.sh  volrepair.sh
tasks/: cookiejar.yml  debug.yml  hashpwds.yml  helmdiffup.yml  kubeconfig.yml  localfacts.yml  mkreadable.yml  mkvcluster.yml  readable.yml  resolvehosts.yml  rmvcluster.yml  servicemesh.yml  shutdown.yml  tlssecret.yml
templates/: coredns.yaml.j2  cors.nginx.j2  initpgdbs.sql.j2  istio.yaml.j2  netplan.yaml.j2  nginx.yaml.j2  nopasswd.j2  rancher.sh.j2  vcluster.yaml.j2
tests/bazel/: .bazelrc  BUILD.bazel  MODULE.bazel  README.md  history.sh
tests/bazel/lib/: BUILD.bazel
tests/bazel/main/: BUILD.bazel  hello-world.cc
tests/bazel/test/: BUILD.bazel  hello-test.cc
tests/bazel/tools/: bazel
vars/: argocd.yml  awx.configure.yml  awx.yml  basics.yml  bentopdf.yml  buildbuddy.yml  buildfarm.yml  buildkite.yml  certmanager.yml  dns.yml  externaldns.yml  externalsecrets.yml  files.yml  flowise.yml  gitea.configure.yml  gitea.yml  gitlab.configure.yml  gitlab.secrets.yml  gitlab.secrets.yml.tpl  gitlab.yml  grafana.yml  harbor.configure.yml  harbor.yml  istio.yml  jenkins.configure.yml  jenkins.yml  keycloak.yml  kibana.yml  kubernetes.yml  kyverno.yml  (+43 more)
(+248 files in other folders)
