[project]
name = "homelab-k8s"
version = "2.0.0"
description = "Ansible playbooks to provision infrastructure and services for Erhhung's Kubernetes cluster at home."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ansible-core>=2.20.4",
    "ansible-lint>=25.8.2",
    "bcrypt==4.0.1",
    "netaddr>=1.3.0",
    "passlib>=1.7.4",
    "tomlkit>=0.14.0",
]
